--- a/src/customers/pages/Home/HomePage.css
+++ b/src/customers/pages/Home/HomePage.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url("https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-image: url("./bg.jpg");
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat;
     width: 100%;
