--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ p{
 
 /* Style the scrollbar thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #e91e63; /* Set the color of the scrollbar thumb */
+  background-color: #FC8019; /* Set the color of the scrollbar thumb */
   border-radius: 6px; /* Add rounded corners to the thumb */
 }
 
